--- a/clinbrain-mq-admin/src/main/resources/templates/index.html
+++ b/clinbrain-mq-admin/src/main/resources/templates/index.html
@@ -6,23 +6,10 @@
 </head>
 <body>
 <a th:href="@{/admin/login}">
-点我跳转到后台
+点我跳转到后台管理页面
 </a>
-
-
 <div>
-
-这儿写前台html，如果你是只有后台的程序，请自行修改 IndexController
 </div>
 
 </body>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?76968355bd5f8c263c65a1ad6dca8fa8";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
 </html>
