--- a/clinbrain-mq-admin/src/main/resources/templates/login.html
+++ b/clinbrain-mq-admin/src/main/resources/templates/login.html
@@ -9,9 +9,9 @@
 <form class="layui-form" action="javascript:void(0);">
     <div class="layui-form-item">
         <img class="logo" th:src="@{/static/admin/images/logo.png}" />
-        <div class="title">springboot-v2</div>
+        <div class="title">消息平台管理</div>
         <div class="desc">
-            	v2新的一年新的开始
+            	clinbrain- 消息发送管理后台
         </div>
     </div>
     <div class="layui-form-item">
